[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/ui/design.png" type="Texture2D" id=1]
[ext_resource path="res://controls/controls_menu.gd" type="Script" id=2]
[ext_resource path="res://ui/buttons/order_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/ui/kenvector_future.ttf" type="FontFile" id=4]

[sub_resource type="StyleBoxTexture" id=30]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 35, 175, 86 )
offset_left = 5.0
offset_right = 5.0
offset_top = 5.0
offset_bottom = 5.0
modulate_color = Color( 1, 1, 1, 0.941176 )

[sub_resource type="FontFile" id=31]
size = 13
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxTexture" id=32]
texture = ExtResource( 1 )
region_rect = Rect2( 108, 0, 35, 35 )
offset_left = 3.0
offset_right = 3.0
offset_top = 3.0
offset_bottom = 3.0

[sub_resource type="StyleBoxTexture" id=33]
texture = ExtResource( 1 )
region_rect = Rect2( 145, 37, 33, 33 )
offset_left = 2.0
offset_right = 2.0
offset_top = 2.0
offset_bottom = 2.0

[sub_resource type="CompressedTexture2D" id=29]
load_path = "res://.import/icons.png-bee93322a617e5fe670331de2acd3918.stex"

[sub_resource type="AtlasTexture" id=34]
atlas = SubResource( 29 )
region = Rect2( 624, 0, 46, 46 )
margin = Rect2( 2, 2, 0, 0 )

[sub_resource type="FontFile" id=35]
size = 8
font_data = ExtResource( 4 )

[sub_resource type="AtlasTexture" id=36]
atlas = SubResource( 29 )
region = Rect2( 0, 0, 46, 46 )
margin = Rect2( 5, 2, 0, 0 )

[sub_resource type="AtlasTexture" id=37]
atlas = SubResource( 29 )
region = Rect2( 46, 0, 46, 46 )
margin = Rect2( 2, 2, 0, 0 )

[sub_resource type="AtlasTexture" id=38]
atlas = SubResource( 29 )
region = Rect2( 336, 0, 46, 46 )
margin = Rect2( 2, 2, 0, 0 )

[node name="controls_menu" type="ItemList"]
offset_left = -286.0
offset_top = -264.0
offset_bottom = -154.0
custom_styles/panel = SubResource( 30 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="scroll_container" type="ScrollContainer" parent="."]
offset_left = 16.0
offset_top = 12.0
offset_right = 278.0
offset_bottom = 96.0
pivot_offset = Vector2( 290, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="VBoxContainer" parent="scroll_container"]
offset_right = 252.0
offset_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="scroll_container/container"]
offset_right = 252.0
offset_bottom = 16.0
custom_fonts/font = SubResource( 31 )
text = "controls"

[node name="controls_buttons" type="HBoxContainer" parent="scroll_container/container"]
offset_top = 20.0
offset_right = 252.0
offset_bottom = 80.0

[node name="teleport_button" parent="scroll_container/container/controls_buttons" instance=ExtResource( 3 )]
focus_mode = 2
custom_styles/pressed = SubResource( 32 )
custom_styles/disabled = SubResource( 33 )
icon = SubResource( 34 )
script = null

[node name="name" parent="scroll_container/container/controls_buttons/teleport_button" index="0"]
custom_fonts/font = SubResource( 35 )
text = "teleport"

[node name="hint" parent="scroll_container/container/controls_buttons/teleport_button" index="2"]
text = "q"

[node name="lane_button" parent="scroll_container/container/controls_buttons" instance=ExtResource( 3 )]
offset_left = 64.0
offset_right = 124.0
focus_mode = 2
custom_styles/pressed = SubResource( 32 )
custom_styles/disabled = SubResource( 33 )
icon = SubResource( 36 )
script = null

[node name="name" parent="scroll_container/container/controls_buttons/lane_button" index="0"]
text = "lane"

[node name="hint" parent="scroll_container/container/controls_buttons/lane_button" index="2"]
text = "w"

[node name="move_button" parent="scroll_container/container/controls_buttons" instance=ExtResource( 3 )]
offset_left = 128.0
offset_right = 188.0
focus_mode = 2
custom_styles/pressed = SubResource( 32 )
custom_styles/disabled = SubResource( 33 )
icon = SubResource( 37 )
script = null

[node name="name" parent="scroll_container/container/controls_buttons/move_button" index="0"]
text = "move"

[node name="hint" parent="scroll_container/container/controls_buttons/move_button" index="2"]
text = "e"

[node name="attack_button" parent="scroll_container/container/controls_buttons" instance=ExtResource( 3 )]
offset_left = 192.0
offset_right = 252.0
focus_mode = 2
custom_styles/pressed = SubResource( 32 )
custom_styles/disabled = SubResource( 33 )
icon = SubResource( 38 )
script = null

[node name="name" parent="scroll_container/container/controls_buttons/attack_button" index="0"]
text = "attack"

[node name="hint" parent="scroll_container/container/controls_buttons/attack_button" index="2"]
text = "r"

[connection signal="pressed" from="scroll_container/container/controls_buttons/teleport_button" to="." method="teleport_button_down"]
[connection signal="pressed" from="scroll_container/container/controls_buttons/lane_button" to="." method="lane_button_down"]
[connection signal="pressed" from="scroll_container/container/controls_buttons/move_button" to="." method="move_button_down"]
[connection signal="pressed" from="scroll_container/container/controls_buttons/attack_button" to="." method="attack_button_down"]

[editable path="scroll_container/container/controls_buttons/teleport_button"]
[editable path="scroll_container/container/controls_buttons/lane_button"]
[editable path="scroll_container/container/controls_buttons/move_button"]
[editable path="scroll_container/container/controls_buttons/attack_button"]
